# routes/missions.js
@@ -3,6 +3,17 @@ const router = express.Router();
 
 const missionsController = require('../controllers/missions');
 
+// Authentication middleware
+const isAuthenticated = (req, res, next) => {
+  if (req.isAuthenticated && req.isAuthenticated()) {
+    return next();
+  }
+
+  return res.status(401).json({
+    message: 'Authentication required'
+  });
+};
+
 router.get('/', missionsController.getAll);
 /*
   #swagger.tags = ['Missions']
@@ -15,10 +26,13 @@ router.get('/:id', missionsController.getSingle);
   #swagger.description = 'Get one mission by ID'
 */
 
-router.post('/', missionsController.createMission);
+router.post('/', isAuthenticated, missionsController.createMission);
 /*
   #swagger.tags = ['Missions']
-  #swagger.description = 'Create a new mission'
+  #swagger.description = 'Create a new mission - authentication required'
+  #swagger.responses[401] = {
+    description: 'Authentication required'
+  }
   #swagger.parameters['body'] = {
     in: 'body',
     required: true,
@@ -26,10 +40,13 @@ router.post('/', missionsController.createMission);
   }
 */
 
-router.put('/:id', missionsController.updateMission);
+router.put('/:id', isAuthenticated, missionsController.updateMission);
 /*
   #swagger.tags = ['Missions']
-  #swagger.description = 'Update a mission'
+  #swagger.description = 'Update a mission - authentication required'
+  #swagger.responses[401] = {
+    description: 'Authentication required'
+  }
   #swagger.parameters['body'] = {
     in: 'body',
     required: true,
@@ -37,10 +54,13 @@ router.put('/:id', missionsController.updateMission);
   }
 */
 
-router.delete('/:id', missionsController.deleteMission);
+router.delete('/:id', isAuthenticated, missionsController.deleteMission);
 /*
   #swagger.tags = ['Missions']
-  #swagger.description = 'Delete a mission'
+  #swagger.description = 'Delete a mission - authentication required'
+  #swagger.responses[401] = {
+    description: 'Authentication required'
+  }
 */
 
 module.exports = router;
